methods.picture.PictureMono1.scala.code
override def run() {
  var cote=0
  for(cote<-0 to 3){
    avance()
    avance()
    faireV()
    avance()
    avance()
    gauche()
  }
}

def fairV(){
  baisseBrosse()
  leveBrosse()
  
  gauche()
  avance()
  droite()
  avance()
  
  baisseBrosse()
  leveBrosse()
  
  avance()
  droite()
  avance()
  gauche()
  
  baisseBrosse()
  leveBrosse()
}